# compressed-nn-ops-demo

./: README.md  main.js
decompress/: index.html  main.js  mock-data.ipynb
decompress-only/: index.html
mat-vec-mul/: .gitignore  README.md  index.html  main.js  mock-data.ipynb
webgl/: README.md
webgl/decompress-only/: README.md  main.js  mock-data.ipynb
webgl/mat-vec-mul/: index.html  main.js  mock-data.ipynb
wgpu/: .gitignore  Cargo.toml  README.md
wgpu/src/: f16.rs  lib.rs  main.rs  shader.wgsl  shader_copy.wgsl  shader_uncompressed.wgsl
