[package]
default-run = "demo"
edition = "2024"
name = "compressed_mat_vec_mul"
publish = false
rust-version = "1.85"
version = "0.0.1"

[dependencies]
anyhow = "1.0.97"
bytemuck = "1"
byteorder = "1.5.0"
clap = {version = "4.5.32", features = ["derive"]}
clap-verbosity-flag = "3.0.2"
constriction = "0.4.1"
env_logger = "0.11.6"
fxhash = "0.2.1"
indicatif = "0.17.11"
log = "0.4.26"
pollster = "0.4"
probability = "0.20.3"
rand = "0.9.0"
rayon = "1.10.0"
wgpu = "24.0.0"
