[package]
default-run = "demo"
edition = "2024"
name = "compressed_mat_vec_mul"
publish = false
rust-version = "1.85"
version = "0.0.1"

[dependencies]
anyhow = "1.0.97"
bytemuck = {version = "1", features = ["extern_crate_alloc"]}
byteorder = "1.5.0"
clap = {version = "4.5.32", features = ["derive"]}
clap-verbosity-flag = "3.0.2"
constriction = "0.4.1"
env_logger = "0.11.6"
fxhash = "0.2.1"
indicatif = "0.17.11"
log = "0.4.26"
pollster = "0.4"
probability = "0.20.3"
rand = "0.9.0"
rayon = "1.10.0"
safetensors = "0.5.3"

# We fix wgpu to a specific commit for now so that we can use our optimizations in PRs #7494, #7574,
# #7595, #7653, and #7664. These will be part of wgpu version 26.0, to be released in July 2025.
wgpu = {git = "https://github.com/gfx-rs/wgpu.git", rev = "ff291654b3f6a7cd67c6b1907203c525d262e1b9"}
